fix rendering issue with OTC stocks category icon on safari and firefox

--- a/sass/components/_categorical-display.scss
+++ b/sass/components/_categorical-display.scss
@@ -87,15 +87,14 @@
                 &.ic-forex,
                 &.ic-commodities,
                 &.ic-volidx,
-                &.ic-stocks,
                 &.ic-favorite {
                     svg > g > circle { fill: $active-color; }
                 }
                 &.ic-indicators > svg > g circle {
                     fill: $active-color;
                 }
-                &.ic-stocks {
-                    svg > g > g:last-child { fill: $active-color; }
+                &.ic-stocks > svg > path:first-child {
+                    fill: $active-color;
                 }
                 &.ic-indices {
                     svg > g > g {
